First unitTest passed AuthController class